--- a/api.html
+++ b/api.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="payment-container">
-        <h2>Payment Details</h2>
+        <h2>Payment Details--</h2>
         <form id="payment-form">
             <label for="amount">Amount to Pay:</label>
             <input type="text" id="amount" name="amount" required>
