--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -205,7 +205,7 @@ var storageRef = storage.ref();
                 alert("Password reset email sent successfully. Check your email inbox.");
             })
             .catch((error) => {
-                console.error("Error sending password reset email:", error.message);
+                console.error("Error sending password reset email:haha", error.message);
             });
     });
     
