--- a/chat.html
+++ b/chat.html
@@ -115,7 +115,7 @@
             messageElement.innerHTML = `<strong>${sender}:</strong> ${text}`;
             chatContainer.appendChild(messageElement);
 
-            // Scroll to the bottom of the chat container
+            // Scroll to the bottom of the chat container    nnjhhjj
             chatContainer.scrollTop = chatContainer.scrollHeight;
         }
 
