--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <div class="screen chat-screen" style="display: flex; justify-content: center; align-items: center; flex-direction: column; height: 95vh;">
             <div class="header" style="background: #111; height: 50px; display: flex; justify-content: space-between; align-items: center; padding: 0px 20px;">
                 <div class="logo" style="font-size: 18px; color: #eee; font-weight: 600;">Chat Room</div>
-<!--                <button id="exit-chat" style="padding: 5px 10px; border: 1px solid #eee; background: transparent; color: #eee; font-size: 15px; cursor: pointer; outline: none;">Exit</button>-->
             </div>
             <div class="messages" style="width: 100%; height: calc(100% - 100px); background: #f5f5f5; overflow: auto;"></div>
             <div style="flex: 1;"></div>
             <div class="typebox" style="width: 100%; height: 50px; display: flex;">
-                <input type="text" id="message-input" placeholder="Type your message..." style="flex: 1; height: 50px; font-size: 18px;">
+                <input type="text" id="username-input" placeholder="Your Username..." style="flex: 1; height: 50px; font-size: 18px;">
+                <input type="text" id="message-input" placeholder="Type your message..." style="flex: 3; height: 50px; font-size: 18px;">
                 <button id="send-message" style="width: 80px; height: 100%; background: #111; color: #eee; font-size: 16px; outline: none; border: none; cursor: pointer;">Send</button>
             </div>
         </div>
@@ -24,23 +24,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
     <script>
         const socket = io();
-
-        const messagesDiv = document.querySelector('.messages');
+        const usernameInput = document.getElementById("username-input");
         const messageInput = document.getElementById("message-input");
         const sendMessageBtn = document.getElementById("send-message");
 
         sendMessageBtn.addEventListener("click", sendMessage);
 
-        socket.on("chat message", function(message) {
+        socket.on("chat message", function(data) {
+            const { username, message } = data;
+            const messagesDiv = document.querySelector('.messages');
             const messageDiv = document.createElement("div");
-            messageDiv.textContent = message;
+            messageDiv.textContent = `${username}: ${message}`;
             messagesDiv.appendChild(messageDiv);
         });
 
         function sendMessage() {
-            const message = messageInput.value;
-            if (message.trim() !== "") {
-                socket.emit("chat message", message);
+            const username = usernameInput.value.trim();
+            const message = messageInput.value.trim();
+            if (username && message) {
+                socket.emit("chat message", { username, message });
                 messageInput.value = "";
             }
         }
