modifications made in login page

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@ var storageRef = storage.ref();
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background: url('travel.jpg') no-repeat center center fixed;
+            background: url('ui1.jpg') no-repeat center center fixed;
             background-size: cover;
         }
 
