--- a/student_home.html
+++ b/student_home.html
@@ -189,8 +189,8 @@
     <div class="icons-container">
         <button class="icon-button" onclick="window.location.href='trip_planner.html'">Trip Planner</button>
         <button class="icon-button" onclick="window.location.href='attendance_marker.html'">Attendance Marker</button>
-        <button class="icon-button" onclick="window.location.href='company.html'">Company</button>
-        <button class="icon-button" onclick="window.location.href='agency.html'">Agency</button>
+        <button class="icon-button" onclick="window.location.href='company_search.html'">Company</button>
+        <button class="icon-button" onclick="window.location.href='agency_search.html'">Agency</button>
     </div>
 
  <div id="map"></div>
