uploading image added

--- a/company/company_details.html
+++ b/company/company_details.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-storage.js"></script>
     <script>
+        // Initialize Firebase
         const firebaseConfig = {
-          apiKey: "AIzaSyBZL5ajdJR_wnjrvWhIzxTfCP56MQXf0KI",
-          authDomain: "ivpbs-f2ca0.firebaseapp.com",
-          databaseURL: "https://ivpbs-f2ca0-default-rtdb.firebaseio.com",
-          projectId: "ivpbs-f2ca0",
-          storageBucket: "ivpbs-f2ca0.appspot.com",
-          messagingSenderId: "1049725030175",
-          appId: "1:1049725030175:web:c9bbf54d8e6003060e6a2a",
-          measurementId: "G-8PXXV5TNTR"
+            apiKey: "AIzaSyBZL5ajdJR_wnjrvWhIzxTfCP56MQXf0KI",
+            authDomain: "ivpbs-f2ca0.firebaseapp.com",
+            databaseURL: "https://ivpbs-f2ca0-default-rtdb.firebaseio.com",
+            projectId: "ivpbs-f2ca0",
+            storageBucket: "ivpbs-f2ca0.appspot.com",
+            messagingSenderId: "1049725030175",
+            appId: "1:1049725030175:web:c9bbf54d8e6003060e6a2a",
+            measurementId: "G-8PXXV5TNTR"
         };
-        firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);  
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,11 +84,11 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             width: 300px;
             text-align: center;
-            margin: 20px auto; 
-            position: absolute; 
-            top: 50%; 
-            left: 50%; 
-            transform: translate(-50%, -50%); 
+            margin: 20px auto;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         .form-container label {
@@ -118,11 +121,17 @@
         }
 
         @keyframes typing {
-            from { width: 0; }
-            to { width: 100%; }
+            from {
+                width: 0;
+            }
+
+            to {
+                width: 100%;
+            }
         }
     </style>
 </head>
+
 <body>
     <div class="upper-bar">
         <!-- Your navigation links here -->
@@ -148,37 +157,84 @@
                 <input type="email" id="companyEmail" name="companyEmail" required>
             </div>
             <div class="form-group">
+                <input type="file" id="imageFile" accept="image/*">
+            </div>
+            <div class="form-group">
                 <button onclick="submitForm()">Submit</button>
             </div>
         </form>
     </div>
 
     <script>
-        function submitForm() {
-            // Extract form data
-            var companyName = document.getElementById("companyName").value;
-            var companyLocation = document.getElementById("companyLocation").value;
-            var companyPhone = document.getElementById("companyPhone").value;
-            var companyEmail = document.getElementById("companyEmail").value;
 
-            // Access the Firestore database and add the data
-            var firestore = firebase.firestore();
-            firestore.collection("companies").add({
-                name: companyName,
-                location: companyLocation,
-                phone: companyPhone,
-                email: companyEmail
-            })
-            .then(function(docRef) {
-                console.log("Document written with ID: ", docRef.id);
-            })
-            .catch(function(error) {
-                console.error("Error adding document: ", error);
-            });
+        // Access Firestore and Storage
+        const firestore = firebase.firestore();
+        const storage = firebase.storage();
 
-            // Reset form
-            document.getElementById("addCompanyForm").reset();
+        function uploadImage(docId, imageFile) {
+            if (imageFile) {
+                const storageRef = storage.ref();
+                const imageRef = storageRef.child('company_images/' + docId);
+
+                // Upload file to the storage reference
+                return imageRef.put(imageFile)
+                    .then((snapshot) => {
+                        console.log('Uploaded a blob or file!', snapshot);
+                        return snapshot.ref.getDownloadURL(); // Get download URL of the uploaded image
+                    })
+                    .catch((error) => {
+                        console.error('Error uploading file: ', error);
+                    });
+            }
         }
+
+        function submitForm() {
+    // Prevent default form submission
+    event.preventDefault();
+
+    // Extract form data
+    var companyName = document.getElementById("companyName").value;
+    var companyLocation = document.getElementById("companyLocation").value;
+    var companyPhone = document.getElementById("companyPhone").value;
+    var companyEmail = document.getElementById("companyEmail").value;
+    var imageFile = document.getElementById("imageFile").files[0];
+
+    // Define variable to store document ID
+    var newDocId;
+
+    // Access the Firestore database and add the data
+    firestore.collection("companies").add({
+        name: companyName,
+        location: companyLocation,
+        phone: companyPhone,
+        email: companyEmail,
+    })
+    .then(function (docRef) {
+        // Assign the document ID to the variable
+        newDocId = docRef.id;
+        console.log("Document written with ID: ", newDocId);
+        // Upload image to Storage
+        return uploadImage(newDocId, imageFile);
+    })
+    .then(function (downloadURL) {
+        // Add the image URL to the document in Firestore
+        return firestore.collection("companies").doc(newDocId).update({
+            imageURL: downloadURL
+        });
+    })
+    .then(() => {
+        console.log("Image URL added to document");
+    })
+    .catch(function (error) {
+        console.error("Error adding document: ", error);
+    });
+
+    // Reset form
+    document.getElementById("addCompanyForm").reset();
+}
+
+
     </script>
 </body>
+
 </html>
